style: prevents screen content overflow

--- a/2-src/scss/2-layout/_layouts.scss
+++ b/2-src/scss/2-layout/_layouts.scss
@@ -1,4 +1,5 @@
 .layout-screen {
+    overflow: hidden;
     .screen-content {
         position: absolute;
         top: 0;
